# my-crypto-bank

./: .gitignore  README.md  package-lock.json
backend/: .env  CryptoDB.db  README.md  config.py  main.py  pyproject.backup.toml  pyproject.toml  requirements.txt
backend/controllers/: account.py  auth.py  crypto.py  transaction.py
backend/model/: crypto_account.py  crypto_currency.py  payment_card.py  transaction.py  transaction_state.py  user.py
backend/modules/: authorization.py  modules.py
backend/moduls/: authorization.py  modules.py
frontend/: .gitignore  bun.lockb  package.json
frontend/public/: index.html
frontend/src/: App.js  RequireAuth.js  httpClient.js  index.css  reportWebVitals.js
frontend/src/Components/: APIService.js  BankImport.js  BlockUser.js  BlockUserList.js  CryptoAll.js  CryptoAllList.js  CryptoGraphs.jsx  CurrencyExchange.js  ErrorModal.js  LandingNav.js  LandingPage.js  MainPage.js  ModalWindow.js  RegistrationForm.js  Transaction.js  TransactionList.js  TransactionRequest.js  TransactionRequestLists.js  TransactionRequestLits.js  Transfer.js  TransferValidationModal.js  Unauthorized.js  UserCrypto.js  UserCryptoList.js  Verification.js
